# all_bolt_backend

./: .gitignore  Dockerfile  azure-pipelines.yml  error_too_long_in_chars.txt  project_structure.txt  pyproject.toml
.github/workflows/: azure-deploy.yml
app/: .env.template  alembic.ini  config.py  database.py  deployment_commands.txt  main.py
app/alembic/: env.py
app/alembic/versions/: 01234567abcd_manual_migrations.py  1234567abcde_soft_delete_scripts.py  1b35381aa0e2_recreate_beats_table.py  1b7252df88d6_adding_script_progress_to_script_table.py  1ef30e8cdf00_scenes_table_added.py  2035ec976c9c_updating_act_enum.py  23456789abcd_add_shortening_alternatives.py  2b57188b345f_correcting_scene_description.py  2e283707eed0_updating_segements_to_beat_scene_desc.py  30557548312e_restoring_scenes_table.py  34567890abce_add_shortening_selection_history.py  3541aa926db2_adding_beats_to_sql_model_update.py  (+19 more)
app/auth/: ai_guard.py  dependencies.py  utils.py
app/models/: __init__.py  base.py  beat.py  beats.py  scene_segments.py  scenes.py  script.py  subscription.py  usage.py  users.py
app/routers/: beats.py  pricing.py  scene_descriptions.py  scene_segments.py  scenes.py  scripts.py  test_beats.py  users.py
app/schemas/: beat.py  scene.py  scene_description.py  scene_segment.py  scene_segment_ai.py  script.py  user.py
app/services/: azure_service.py  beat_service.py  openai_service.py  scene_description_service.py  scene_segment_ai_service.py  scene_segment_service.py  scene_service.py  script_service.py  subscription_service.py  usage_service.py  user_service.py
(+7 files in other folders)
